se solucionaron medidas de header y se coloco la class page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="page">
 
     <header>
         <img class="header__logo" src="/images/Group 13.png" alt="logotipo de titulo"></src=>
