se corrigio el header logo con el logo original, el anterior era um texto, y se trabajo con el titulo hasta la imagen

--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <div class="page">
 
     <header>
-        <img class="header__logo" src="/images/Group 13.png" alt="logotipo de titulo"></src=>
-        <h5 class="header__title">TRIPLETEN ART GALLERY</h5>
-        <!--en ccs poner la propiedad header para centrar los dos contenidos-->
+        <img class="header__logo" src="/images/logo.svg" alt="logotipo de titulo"></src=>
+        
     </header>
-    <main class="informacion">
+     <main class="informacion">
 
         <div class="informacion__introduccion">
             <h1 class="informacion__title">De patria a patria</h1>
             <p class="informacion__subtitle">Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania</p>
             <img class="informacion__image" src="/images/__image.jpg" alt="imagen de paisaje">
         </div>
-        <div class="lugares">
+        <!-- <div class="lugares">
             <h3 class="lugares__title" Conoce un poco mejor los lugares de los que proceden tus colegas en línea></h3>
             <p class="lugares__introduccion">Todo ser humano es un artista, un ser de la libertad,
                 llamado a participar en la transformación y reforma de las condiciones,
@@ -37,13 +36,13 @@
                 nosotros tiene una historia única sobre el lugar del que procede.
                 No dudes en añadir a nuestra colección tu propia historia y una obra de arte visual dedicada
                 a tu ciudad natal. No importa de dónde seas, nos alegra que seas nuestro vecino.
-            </p>
+            </p> -->
         </div>
 
     </main>
     <footer>
         <h6 class="header__foooter">© 2024. Introduce tu nombre</h6>
-    </footer>
+    </footer> 
 </div>
 </body>
 
