se agregaron las nuevas carpetas con su respectivo orden y se escribio una breve una breve reseña del proyecto.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                 nosotros tiene una historia única sobre el lugar del que procede.
                 No dudes en añadir a nuestra colección tu propia historia y una obra de arte visual dedicada
                 a tu ciudad natal. No importa de dónde seas, nos alegra que seas nuestro vecino.
-            </p> </>
+            </p> 
     <footer>
         <p class="footer__autor">© 2024. Mauricio Ramirez</p>
     </footer>  
