se finaliza el proyecto, se agregaron los MQ requeridos para los 3 distintos tipos de resoluciones parta los respectivos dispositivos.

--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css"/>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="page">
+      <header class="header">
 
-    <header>
-        <img class="header__logo" src="/web_project_homeland/images/logo.svg" alt="logotipo de titulo">
-        
-    </header>
-<main class="informacion">
-
+        <img
+          class="header__logo"
+          src="./images/logo.svg"
+          alt="logotipo de titulo"
+        />
+      </header>
+      
+      <main class="informacion">
         <div class="informacion__introduccion">
-            <h1 class="informacion__title">De patria a patria</h1>
-            <p class="informacion__subtitle">Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania</p>
-            <img class="informacion__image" src="/web_project_homeland/images/__image.jpg" alt="imagen de paisaje">
+          <h1 class="informacion__title">De patria a patria</h1>
+          <p class="informacion__subtitle">
+            Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
+          </p>
+          <img class="informacion__image" src="./images/__image.jpg" alt="imagen de paisaje"/>
         </div>
+        <div class="lugares">
+          <div class="lugares__contenedor">
+          <h3 class="lugares__title">
+            Conoce un poco mejor los lugares de los que proceden tus colegas en
+            línea
+          </h3>
+          <p class="lugares__introduccion">
+            Todo ser humano es un artista, un ser de la libertad, llamado a
+            participar en la transformación y reforma de las condiciones, el
+            pensamiento y las estructuras que conforman e influyen en nuestras
+            vidas.
+          </p>
+          <p class="lugares__autor">— Joseph Beuys</p>
 
-    </main>
-   <div      class="lugares">
-            <h3 class="lugares__title">Conoce un poco mejor los lugares de los que proceden tus colegas en línea</h3>
-            <p class="lugares__introduccion">Todo ser humano es un artista, un ser de la libertad,
-                llamado a participar en la transformación y reforma de las condiciones,
-                el pensamiento y las estructuras que conforman e influyen en nuestras vidas.
-            </p>
-            <p class="lugares__autor">— Joseph Beuys</p>
-
-            <p class="lugares__texto">La ciudad de TripleTen ha reunido a profesionales de diferentes rincones del mundo.
-                Hoy, la Galería de Arte TripleTen se enorgullece de presentar historias y fotografías
-                de algunas de las personas que dedican su tiempo y esfuerzo a hacer que los futuros
-                profesionales de la tecnología de esta ciudad se sientan como en casa. Cada uno de
-                nosotros tiene una historia única sobre el lugar del que procede.
-                No dudes en añadir a nuestra colección tu propia historia y una obra de arte visual dedicada
-                a tu ciudad natal. No importa de dónde seas, nos alegra que seas nuestro vecino.
-            </p> 
-    <footer>
+          <p class="lugares__texto">
+            La ciudad de TripleTen ha reunido a profesionales de diferentes
+            rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece
+            de presentar historias y fotografías de algunas de las personas que
+            dedican su tiempo y esfuerzo a hacer que los futuros profesionales
+            de la tecnología de esta ciudad se sientan como en casa. Cada uno de
+            nosotros tiene una historia única sobre el lugar del que procede. No
+            dudes en añadir a nuestra colección tu propia historia y una obra de
+            arte visual dedicada a tu ciudad natal. No importa de dónde seas,
+            nos alegra que seas nuestro vecino.
+          </p>
+        </div>
+        </div>
+      </main>
+      <footer>
         <p class="footer__autor">© 2024. Mauricio Ramirez</p>
-    </footer>  
-</div>
-</body>
-
-
-
-
+      </footer>
+    </div>
+  </body>
 </html>
