se adjuntaron los Metas tags necesarios para el proyecto

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>De patria patria</title>
+    <meta name="description" content="Project 5 de patria apatria" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Mauricio Ramirez" />
   </head>
 
   <body>
