se corrigieron unas importaciones y se renombraron etiquetas

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         />
       </header>
 
-      <main class="informacion">
-        <div class="informacion__introduccion">
+      <main class="content">
+        <section class="informacion"> 
           <h1 class="informacion__title">De patria a patria</h1>
           <p class="informacion__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -31,8 +31,8 @@
             src="./images/__image.jpg"
             alt="imagen de paisaje"
           />
-        </div>
-        <div class="lugares">
+        </section>
+        <section class="lugares"> <!-- asdjuntar seccion -->
           <div class="lugares__contenedor">
             <h3 class="lugares__title">
               Conoce un poco mejor los lugares de los que proceden tus colegas
@@ -58,9 +58,9 @@
               importa de dónde seas, nos alegra que seas nuestro vecino.
             </p>
           </div>
-        </div>
+        </section>
       </main>
-      <footer>
+      <footer class="footer">
         <p class="footer__autor">© 2024. Mauricio Ramirez</p>
       </footer>
     </div>
