se agregaron nuevas imagenes,  y se colocaron en su carpera adecuada. tambien se agrego un nuevo container el cual contiene nueva informacion con respecto a los lugares nuevos

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
           alt="logotipo de titulo"
         />
       </header>
-
       <main class="content">
-        <section class="informacion"> 
+        <section class="informacion">
           <h1 class="informacion__title">De patria a patria</h1>
           <p class="informacion__subtitle">
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
@@ -32,7 +31,7 @@
             alt="imagen de paisaje"
           />
         </section>
-        <section class="lugares"> <!-- asdjuntar seccion -->
+        <section class="lugares">
           <div class="lugares__contenedor">
             <h3 class="lugares__title">
               Conoce un poco mejor los lugares de los que proceden tus colegas
@@ -59,7 +58,158 @@
             </p>
           </div>
         </section>
+        <section class="gallery">
+          <img src="./images/__item.png" alt="paisajes" />
+          <img src="./images/__item1.png" alt="paisajes" />
+          <img src="./images/__item2.png" alt="paisajes" />
+          <img src="./images/__item3.png" alt="paisajes" />
+          <img src="./images/__item4.png" alt="paisajes" />
+          <img src="./images/__item5.png" alt="paisajes" />
+          <img src="./images/__item6.png" alt="paisajes" />
+          <img src="./images/__item7.png" alt="paisajes" />
+        </section>
+
+        <section class="container">
+          <div class="place">
+            <h4 class="place__tilte">Cricieth, Gales</h4>
+            <div class="place__escritores">
+              <p class="place__artista">ARTISTAS</p>
+              <p class="place__autor">Steffan Warren, editor jefe</p>
+              <p class="place__autor">Kseniya Glagoleva, gerente de proyectos</p>
+            </div>
+            <img class="place__image" src="./images/__image.png" alt="vista gales" />
+            <div class="place__texto">
+              <p>
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p>
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
+            <p class="place__boton">Compra esta obra como NFT</p>
+          </div>
+           <div class="place">
+            <h4 class="place__tilte">Berea, EE. UU.</h4>
+            <div class="place__escritores">
+              <p class="place__artista">ARTISTA</p>
+              <p class="place__autor">Travis Turner, autor y editor</p>
+            </div>
+            <img class="place__image" src="./images/__image1.png" alt="vista EE" />
+            <div class="place__texto">
+              <p>
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p>
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+            <p class="place__boton">Compra esta obra como NFT</p>
+          </div> 
+           <div class="place">
+            <h4 class="place__tilte">Muramvya, Burundi</h4>
+            <div class= "place__escritores">
+              <p class="place__artista">ARTISTA</p>
+              <p class="place__autor">Grevisse Kenguruka, editor técnico</p>
+            </div>
+            <img class="place__image" src="./images/__image2.png" alt="vista EE" />
+            <div class="place__texto">
+              <p>
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p>
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p>
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+            <p class="place__boton">Compra esta obra como NFT</p>
+          </div>
+          <div class="place">
+            <h4 class="place__tilte">Ciudad De México, México.</h4>
+            <div class= "place__escritores">
+              <p class="place__artista">ARTISTA</p>
+              <p class="place__autor">Mauricio Ramirez, Ciudadano</p>
+            </div>
+            <img class="place__image" src="/images/mex.png" alt="ciudad de mexico" />
+            <div class="place__texto">
+              <p>
+                La Ciudad de México, capital de México, es una de las ciudades
+                más grandes y pobladas del mundo, destacada por su riqueza
+                histórica, cultural y económica. Fundada en 1325 como
+                Tenochtitlan por los mexicas, la ciudad fue conquistada por los
+                españoles en 1521 y se convirtió en un importante centro
+                colonial. Hoy en día, es conocida por su arquitectura colonial y
+                moderna, museos de renombre, una vibrante escena gastronómica y
+                barrios históricos como Coyoacán y Roma. Su economía es una de
+                las más fuertes de América Latina, y su posición geográfica en
+                el Valle de México la hace susceptible a movimientos sísmicos,
+                lo que ha influido en su desarrollo urbano.
+              </p>
+              <p>
+                Es conocida por su amplia oferta cultural, albergando más de 150
+                museos, 100 galerías de arte y múltiples sitios históricos, como
+                el Centro Histórico, declarado Patrimonio de la Humanidad por la
+                UNESCO. Aquí se encuentran íconos como el Zócalo, la Catedral
+                Metropolitana, el Palacio de Bellas Artes y el Templo Mayor.
+              </p>
+              <p>
+                La Ciudad de México es famosa por su variada gastronomía, que
+                incluye desde la comida tradicional mexicana (como tacos,
+                tamales y mole) hasta restaurantes galardonados
+                internacionalmente. Es un destino principal para los amantes de
+                la cocina, con múltiples mercados de alimentos
+              </p>
+            </div>
+            <p class="place__boton">Compra esta obra como NFT</p>
+          </div> 
+            </div>
+          </div>
+        </section>
       </main>
+
       <footer class="footer">
         <p class="footer__autor">© 2024. Mauricio Ramirez</p>
       </footer>
