--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
           </div>
         </section>
         <section class="gallery">
-          <img src="./images/__item.png" alt="paisajes" />
-          <img src="./images/__item1.png" alt="paisajes" />
-          <img src="./images/__item2.png" alt="paisajes" />
-          <img src="./images/__item3.png" alt="paisajes" />
-          <img src="./images/__item4.png" alt="paisajes" />
-          <img src="./images/__item5.png" alt="paisajes" />
-          <img src="./images/__item6.png" alt="paisajes" />
-          <img src="./images/__item7.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item1.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item2.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item3.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item7.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item6.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item5.png" alt="paisajes" />
+          <img class="gallery__images"src="./images/__item4.png" alt="paisajes" />
+          
         </section>
 
-        <section class="container">
+        <section class="container"> 
           <div class="place">
             <h4 class="place__tilte">Cricieth, Gales</h4>
             <div class="place__escritores">
@@ -98,7 +99,7 @@
                 Primer Ministro del Reino Unido.
               </p>
             </div>
-            <p class="place__boton">Compra esta obra como NFT</p>
+            <button class="place__boton">Compra esta obra como NFT</button>
           </div>
            <div class="place">
             <h4 class="place__tilte">Berea, EE. UU.</h4>
@@ -127,8 +128,8 @@
                 no cobra colegiatura: cada estudiante recibe una beca del 100%.
               </p>
             </div>
-            <p class="place__boton">Compra esta obra como NFT</p>
-          </div> 
+            <button class="place__boton">Compra esta obra como NFT</button>
+           </div> 
            <div class="place">
             <h4 class="place__tilte">Muramvya, Burundi</h4>
             <div class= "place__escritores">
@@ -165,8 +166,8 @@
                 país.
               </p>
             </div>
-            <p class="place__boton">Compra esta obra como NFT</p>
-          </div>
+            <button class="place__boton">Compra esta obra como NFT</button>
+                    </div>
           <div class="place">
             <h4 class="place__tilte">Ciudad De México, México.</h4>
             <div class= "place__escritores">
@@ -203,8 +204,8 @@
                 la cocina, con múltiples mercados de alimentos
               </p>
             </div>
-            <p class="place__boton">Compra esta obra como NFT</p>
-          </div> 
+            <button class="place__boton">Compra esta obra como NFT</button>
+           </div> 
             </div>
           </div>
         </section>
